fixed a few things in projects page

--- a/projects.html
+++ b/projects.html
@@ -216,12 +216,11 @@
                   <a href="#" class="project-link details-link see-more-btn">
                       <i class="fas fa-file-alt"></i> Read More
                   </a>
-              </div>
+                </div>
 
-              <div class="additional-details" style="display: none;">
-                The editor implements a multi-panel interface with draggable/resizable components, supporting concurrent file editing (tested with 15+ simultaneous tabs). Our custom PWA implementation using Workbox achieves 95% Lighthouse scores with offline-first capabilities. The algorithm visualizer component includes time complexity comparisons for sort algorithms (QuickSort, MergeSort, BubbleSort) and pathfinding visualization using Dijkstra's algorithm.
-
-            </div>
+                <div class="additional-details" style="display: none; color: #cccccc; font-size: 0.68rem; line-height: 1.6; font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;">
+                    The editor implements a multi-panel interface with draggable/resizable components, supporting concurrent file editing (tested with 15+ simultaneous tabs). Our custom PWA implementation using Workbox achieves 95% Lighthouse scores with offline-first capabilities. The algorithm visualizer component includes time complexity comparisons for sort algorithms (QuickSort, MergeSort, BubbleSort) and pathfinding visualization using Dijkstra's algorithm.
+                </div>
 
                 <div class="tech-details">
                     <div class="tech-title"><i class="fas fa-cogs"></i> Technical Architecture</div>
@@ -230,7 +229,7 @@
                         <div class="tech-item"><i class="fas fa-paint-brush"></i> SCSS Modules</div>
                         <div class="tech-item"><i class="fas fa-comments"></i> Y-js CRDT Framework</div>
                         <div class="tech-item"><i class="fas fa-network-wired"></i> WebRTC Peer Connections</div>
-                        <div class="tech-item"><i class="fab fa-network-wired"></i> EasyPeasy State Management</div>
+                        <div class="tech-item"><i class="fas fa-network-wired"></i> EasyPeasy State Management</div>
                         <div class="tech-item"><i class="fas fa-cloud"></i> Netlify Edge Functions</div>
                         <div class="tech-item"><i class="fas fa-network-wired"></i> Google Workbox </div>
                         
@@ -287,12 +286,15 @@
                   MentorME is a academic and professional networking platform designed to connect students with experienced peers who have navigated similar challenges. It offers a streamlined interface for posting help queries ("Ments"), one-to-one messaging, and credibility through university database integration—solving the problem of unreliable guidance on traditional platforms like LinkedIn or WhatsApp groups.
                 </div>
 
-                <!-- Added paragraph under See More button -->
-                <div class="additional-details" style="display: none;">
-                    <div class="project-description">
-                      The platform includes features like tag-based searchable posts, verified mentor profiles, and a structured templating system for posting guidance requests, ensuring consistency and discoverability. Its responsive PWA design supports cross-platform usage (Android, iOS, Web), and its backend leverages MongoDB Atlas with secure API endpoints for authentication, real-time messaging, and data management. MentorME not only simplifies peer-to-peer mentorship but also creates a trusted ecosystem of academic collaboration.
-                    </div>
-                  </div>
+                <div style="text-align: right; margin: 15px 0;">
+                  <a href="#" class="project-link details-link see-more-btn">
+                      <i class="fas fa-file-alt"></i> Read More
+                  </a>
+                </div>
+
+                <div class="additional-details" style="display: none; color: #cccccc; font-size: 0.68rem; line-height: 1.6; font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;">
+                    The platform includes features like tag-based searchable posts, verified mentor profiles, and a structured templating system for posting guidance requests, ensuring consistency and discoverability. Its responsive PWA design supports cross-platform usage (Android, iOS, Web), and its backend leverages MongoDB Atlas with secure API endpoints for authentication, real-time messaging, and data management. MentorME not only simplifies peer-to-peer mentorship but also creates a trusted ecosystem of academic collaboration.
+                </div>
 
                 <div class="tech-details">
                     <div class="tech-title"><i class="fas fa-cogs"></i> Technical Architecture</div>
@@ -301,7 +303,7 @@
                       <div class="tech-item"><i class="fas fa-database"></i> MongoDB Atlas</div>
                       <div class="tech-item"><i class="fas fa-code"></i> Express.js REST APIs</div>
                       <div class="tech-item"><i class="fab fa-node-js"></i> Node.js Backend</div>
-\                      <div class="tech-item"><i class="fas fa-envelope"></i> One-to-One Messaging System</div>
+                      <div class="tech-item"><i class="fas fa-envelope"></i> One-to-One Messaging System</div>
                       <div class="tech-item"><i class="fas fa-bolt"></i> JWT Authentication</div>
                       <div class="tech-item"><i class="fas fa-mobile-alt"></i> Responsive PWA (Android/iOS/Web)</div>
                       <div class="tech-item"><i class="fas fa-cloud"></i> Vercel Deployment</div>
@@ -359,12 +361,15 @@
                 Mirror is a face recognition-enabled web authentication service designed to provide secure, real-time user verification during web logins. Unlike traditional methods such as OTPs, Mirror enhances both security and convenience by replacing them with biometric authentication. The system ensures that only legitimate users gain access by implementing advanced liveness detection techniques, such as blink-based intent signaling and eye-closure detection. These safeguards prevent spoofing attempts using photos, videos, or masks, and ensure that authentication cannot occur without the user's conscious action—such as blinking—thereby offering an added layer of protection against forced logins.
               </div>
 
-              <!-- Added paragraph under See More button -->
-              <div class="additional-details" style="display: none;">
-                  <div class="project-description">
-                    The prototype leverages live camera feeds through a React interface and integrates a Python-based backend for face verification. It is cloud-hosted using Firebase, allowing scalability and secure deployment. Planned improvements include quantum-resistant encryption, phone-based credential linkage, and defenses against future threats like deepfakes, doppelgangers, and digital presentation attacks using algorithms like MagNet and datasets such as IDAgender and Disguised Faces in the Wild. With the facial recognition market projected to reach $16.74 billion by 2030, Mirror is positioned to serve sectors like government, healthcare, and e-commerce by offering a fraud-proof and accessible authentication solution.
-                  </div>
-                </div>
+              <div style="text-align: right; margin: 15px 0;">
+                <a href="#" class="project-link details-link see-more-btn">
+                    <i class="fas fa-file-alt"></i> Read More
+                </a>
+              </div>
+
+              <div class="additional-details" style="display: none; color: #cccccc; font-size: 0.68rem; line-height: 1.6; font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;">
+                  The prototype leverages live camera feeds through a React interface and integrates a Python-based backend for face verification. It is cloud-hosted using Firebase, allowing scalability and secure deployment. Planned improvements include quantum-resistant encryption, phone-based credential linkage, and defenses against future threats like deepfakes, doppelgangers, and digital presentation attacks using algorithms like MagNet and datasets such as IDAgender and Disguised Faces in the Wild. With the facial recognition market projected to reach $16.74 billion by 2030, Mirror is positioned to serve sectors like government, healthcare, and e-commerce by offering a fraud-proof and accessible authentication solution.
+              </div>
 
               <div class="tech-details">
                   <div class="tech-title"><i class="fas fa-cogs"></i> Technical Architecture</div>
@@ -429,12 +434,15 @@
                 Carma is an AI-powered video surveillance solution designed to autonomously detect violent activities in real-time CCTV footage. As urban areas deploy thousands of surveillance cameras, the burden of manually monitoring them becomes both impractical and inefficient. Carma addresses this issue by using deep learning models—specifically LRCN (Long-term Recurrent Convolutional Networks) and ConvLSTM—to classify incoming video feeds into fight or no-fight scenarios. Once a video is uploaded to the platform, it is processed by the LRCN model, which integrates CNN for spatial feature extraction and LSTM for temporal sequence learning. The final output is a labeled version of the input video, indicating detected events of interest.
               </div>
 
-              <!-- Added paragraph under See More button -->
-              <div class="additional-details" style="display: none;">
-                  <div class="project-description">
-                    The entire system is built on a modular architecture. The frontend is built using Streamlit, offering a clean interface for uploading and viewing classified videos. It communicates with the backend hosted on AWS via port 8501, where Python scripts handle model inference. Firebase is used for storing and retrieving data, and future enhancements aim to integrate real-time CCTV feeds, live geolocation updates, and a public crime-reporting system. The project currently achieves 73.33% accuracy using LRCN and 64.57% with ConvLSTM, and sets the foundation for scalable, intelligent public safety systems.
-                  </div>
-                </div>
+              <div style="text-align: right; margin: 15px 0;">
+                <a href="#" class="project-link details-link see-more-btn">
+                    <i class="fas fa-file-alt"></i> Read More
+                </a>
+              </div>
+
+              <div class="additional-details" style="display: none; color: #cccccc; font-size: 0.68rem; line-height: 1.6; font-family: 'Montserrat', sans-serif; letter-spacing: 0.5px;">
+                  The entire system is built on a modular architecture. The frontend is built using Streamlit, offering a clean interface for uploading and viewing classified videos. It communicates with the backend hosted on AWS via port 8501, where Python scripts handle model inference. Firebase is used for storing and retrieving data, and future enhancements aim to integrate real-time CCTV feeds, live geolocation updates, and a public crime-reporting system. The project currently achieves 73.33% accuracy using LRCN and 64.57% with ConvLSTM, and sets the foundation for scalable, intelligent public safety systems.
+              </div>
 
               <div class="tech-details">
                   <div class="tech-title"><i class="fas fa-cogs"></i> Technical Architecture</div>
