--- a/projects.html
+++ b/projects.html
@@ -319,10 +319,9 @@
           <div class="project-node"></div>
           <div class="project-video-container">
               <div class="project-video-wrapper">
-                  <video class="project-video" autoplay muted loop playsinline>
-                      <source src="/img/projects/Mirror_project.mp4" type="video/mp4">
-                      <!-- Fallback for browsers that don't support the video format -->
-                      <!-- <img src="/api/placeholder/640/360" alt="Diama - Code Editor"> -->
+                  <video class="project-video" autoplay muted loop playsinline preload="metadata" poster="/img/projects/Mirror_project_poster.jpg">
+                      <source src="/img/projects/Mirror_project.mp4" type="video/mp4" />
+                      Your browser does not support the video tag.
                   </video>
                   <div class="video-controls">
                       <button class="video-control-btn expand-btn" title="Fullscreen"><i class="fas fa-expand"></i></button>
