--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         visibility: visible !important;
         transform: translateX(0) !important;
       }
+
+      .demo .large-header {
+        position: relative;
+        overflow: hidden;
+      }
     </style>
   </head>
 
