--- a/publications.html
+++ b/publications.html
@@ -169,7 +169,7 @@
           playsinline
           preload="auto"
           class="background-video">
-          <source src="img/brain_tractography_vidoe.mp4" type="video/mp4">
+          <source src="/Users/ananyasinghal/Personal_website_2025/reachananya.github.io/img/brain_tractography_vidoe_compressed.mp4" type="video/mp4">
     
         </video>
       </div>
