--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           </p>
           <p class="description">
             Prior to GE, I was an Undergraduate student at <a href="https://snu.edu.in/home/">Shiv Nadar Institute of Eminence</a>, pursuing a Bachelor's degree in <a href="https://snu.edu.in/schools/school-of-engineering/departments/department-of-computer-science-and-engineering/">Computer Science and Engineering</a> with a minor in <a href="https://snu.edu.in/schools/school-of-natural-sciences/departments/department-of-mathematics/">Mathematics</a>. At SNIoE, I closely collaborated with <a href="https://snu.edu.in/faculty/saurabh-janardan-shigwan/">Dr. Saurabh J. Shigwan</a> on reseach in diffusion MRI, particularly in the early diagnosis of neurodegenerative diseases. 
-            During my Undergraduate years I have also interned at <a href="https://www.dell.com/en-in">Dell Technologies</a>, <a href="https://www.nus.edu.sg/">National University of Singapore</a>, <a href="https://cvit.iiit.ac.in/">IIIT Hyderabad, CVIT Lab</a> and <a href="https://www.zkteco.com/en/">ZKTeco</a>. 
+            During my undergraduate years I have also interned at <a href="https://www.dell.com/en-in">Dell Technologies</a>, <a href="https://www.nus.edu.sg/">National University of Singapore</a>, <a href="https://cvit.iiit.ac.in/">IIIT Hyderabad, CVIT Lab</a> and <a href="https://www.zkteco.com/en/">ZKTeco</a>. 
             
           </p>
           <p class="description">
@@ -301,11 +301,11 @@
                       <i class="fab fa-linkedin"></i>
                   </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="https://github.com/reachananya" target="_blank" title="Portfolio">
                     <i class="fas fa-globe"></i>
                 </a>
-            </li>
+              </li> -->
               <li>
                   <a href="https://x.com/Anna92085196" target="_blank" title="Twitter">
                       <i class="fab fa-twitter"></i>
@@ -313,7 +313,7 @@
               </li>
 
               <li>
-                <a href="https://orcid.org/0009-0003-6060-6987" target="_blank" title="Orcid">
+                <a href="hhttps://orcid.org/my-orcid?orcid=0009-0005-7311-5444" target="_blank" title="Orcid">
                     <i class="fab fa-orcid"></i>
                 </a>
               </li>
@@ -408,7 +408,7 @@
                 <div class="update-date">4<sup>th</sup>Nov<br>2023</div>
                 <div class="update-content">
                   <h3>Attended ACML 2023 held at Istanbul, Turkey!</h3>
-                  <p>Presented our research paper virtually titled, "Deep Learning Framework using Sparse Diffusion MRI for Diagnosis of Frontotemporal Dementia," at the 15th Asian Conference on Machine Learning. Collaborated with co-authors Dr. Saurabh Shigwan, Dr. Rajeev Kumar Singh, and Abhishek Tiwari on this research.</p>
+                  <p>Presented our research paper virtually titled, "Early Diagnosis of Alzheimer through Swin-Transformer-Based Deep Learning Framework using Sparse Diffusion Measures", at the 15th Asian Conference on Machine Learning. Collaborated with co-authors Dr. Saurabh Shigwan, Dr. Rajeev Kumar Singh, and Abhishek Tiwari on this research.</p>
                 </div>
               </div>
 
@@ -419,7 +419,7 @@
                 <div class="update-date">3<sup>rd</sup>Sept<br>2023</div>
                 <div class="update-content">
                   <h3>Attended ICCV 2023 at Paris!</h3>
-                  <p>Presented our research paper, "Deep Learning Framework using Sparse Diffusion MRI for Diagnosis of Frontotemporal Dementia," at the BioImage Computing workshop. The work introduces an innovative framework that utilizes sparse diffusion MRI to enable efficient diagnosis while reducing scan time without compromising accuracy. Collaborated with co-authors Dr. Saurabh Shigwan, Dr. Rajeev Kumar Singh, and Abhishek Tiwari on this research.</p>
+                  <p>Presented our research paper, "Deep Learning Framework using Sparse Diffusion MRI for Diagnosis of Frontotemporal Dementia", at the BioImage Computing workshop. The work introduces an innovative framework that utilizes sparse diffusion MRI to enable efficient diagnosis while reducing scan time without compromising accuracy. Collaborated with co-authors Dr. Saurabh Shigwan, Dr. Rajeev Kumar Singh, and Abhishek Tiwari on this research.</p>
                 </div>
               </div>
 
@@ -485,7 +485,7 @@
                 <div class="update-date">6<sup>th</sup> Feb<br>2022</div>
                 <div class="update-content">
                   <h3>Received Harvard WECode Scholarship</h3>
-                  <p>Honored to be awarded the Harvard WECode Scholarship issued by Harvard University. This prestigious scholarship covered the full cost of the conference ticket at the early bird rate and provided financial aid of $200 for travel and related expenses to attend the WECode 2025 conference.</p>
+                  <p>Honored to be awarded the Harvard WECode Scholarship issued by Harvard University. This prestigious scholarship covered the full cost of the conference ticket at the early bird rate and provided financial aid of $200 for travel and related expenses to attend the WECode 2022 conference.</p>
                 </div>
                </div>
 
@@ -502,7 +502,7 @@
               <div class="update-item">
                 <div class="update-date">3<sup>rd</sup> Sept.<br>2021</div>
                 <div class="update-content">
-                  <h3>GGS Feedback Award</h3>
+                  <h3>Generation Google Scholarship Feedback Award</h3>
                   <p>Won the Feedback Star award at the Generation Google Scholars community forum.</p>
                 </div>
               </div>
@@ -530,7 +530,7 @@
               <div class="update-item">
                 <div class="update-date">26<sup>th</sup> June<br>2021</div>
                 <div class="update-content">
-                  <h3>GGS Retreat</h3>
+                  <h3>Generation Google Scholarship Retreat</h3>
                   <p>Participated in the Generation Google Scholarship retreat, networking with fellow scholars and Google professionals.</p>
                 </div>
               </div>
